# triforce

./: .gitignore  AGENTS.md  AGY_WORKER_PROMPT.md  CLAUDE_WORKER_PROMPT.md  CLIENT_ARCHITECTURE.md  CODEX_WORKER_PROMPT.md  CROSS_PLATFORM_CLIENT_PLAN.md  OPERATIONS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REVIEW_FIX_LOG.md  RUNNING.md  SECURITY_REVIEW.md  SIGNING.md  Triforce_Project_Scope_v1.1.docx  agent.js  cli-input.js  cli.js  gen-icons.mjs  install-service.sh  models.config.json  models.js  orchestrator.js  package-lock.json  package.json  pipeline.js  run-registry.js  sandbox.js  server.js  triforce-phase0-prompt.md  triforce.service  usage.js  workspace.js
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: android-smoke.yml  desktop-smoke.yml  release-artifacts.yml
clients/android/: README.md  settings.gradle.kts
clients/desktop/: README.md  package.json
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/shared/: eslint.config.js  index.html  (+5 more)
graphify-out/: .graphify_labels.json  CODEBASE_HEALTH_REPORT.md  GRAPH_REPORT.md  MASTER_TASK_LIST.md  graph.html  graph.json  manifest.json
public/: index.html  login.html  login.js  manifest.json  sw.js
scripts/: sync-version.mjs
test/: agent.test.js  cli-input.test.js  orchestrator.test.js  package.test.js  remote-client-e2e.test.js  run-registry.test.js  sandbox.test.js  server-protocol.test.js  workspace.test.js
(+37 files in other folders)
